[package]
name = "tor-v3-vanity"
version = "0.2.0"
edition = "2021"
description = "A TOR v3 vanity url generator designed to run on an nvidia GPU."
license = "MIT"
repository = "https://github.com/dr-bonez/tor-v3-vanity"
documentation = "http://docs.rs/tor-v3-vanity"
readme = "README.md"
keywords = ["tor", "v3", "vanity", "gpu", "cuda"]
include = ["src/**/*", "Cargo.toml", "core/**/*", "build.rs", "README.md", "LICENSE"]

[[bin]]
name = "t3v"
test = false
bench = false
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
base32 = "0.4"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
# Raw ed25519 group/scalar ops for the incremental algo: Tor uses the stored
# scalar un-clamped, so the address is derived as scalar·B directly (not via
# ed25519-dalek, which clamps).
curve25519-dalek = "2"
ed25519-dalek = "1.0.0-pre.4"
rand = "0.8"
rustacuda = "0.1.2"
sha3 = "0.10"
tor-v3-vanity-core = { version = "0.1.0", path = "./core" }

[build-dependencies]
glob = "0.3"

[dev-dependencies]
# sha2 is only used by the CPU oracles (hand-rolled RFC8032 signing).
sha2 = "0.9"
